Replace triple backticks by the highlight tag

--- a/2011-09-26-nginx-ubuntu-10-04.md
+++ b/2011-09-26-nginx-ubuntu-10-04.md
@@ -5,19 +5,19 @@ date:   2011-09-26 02:18:52
 ---
 Edite o arquivo `/etc/apt/sources.list` e adicione o repositório do NGINX:
 
-```text
+{% highlight text %}
 deb http://nginx.org/packages/ubuntu/ lucid nginx
 deb-src http://nginx.org/packages/ubuntu/ lucid nginx
-```
+{% endhighlight %}
 
 Atualize a lista de pacotes:
 
-```sh
+{% highlight sh %}
 sudo apt-get update
-```
+{% endhighlight %}
 
 E instale o NGINX:
 
-```sh
+{% highlight sh %}
 sudo apt-get install nginx
-```
+{% endhighlight %}
