--- a/2011-09-26-ufw-ubuntu-10-04.md
+++ b/2011-09-26-ufw-ubuntu-10-04.md
@@ -5,24 +5,24 @@ date:   2011-09-26 02:14:46
 ---
 Instale o UFW:
 
-```sh
+{% highlight sh %}
 sudo apt-get install ufw
-```
+{% endhighlight %}
 
 Adicione a regra para permitir conexões SSH:
 
-```sh
+{% highlight sh %}
 sudo ufw allow ssh/tcp
-```
+{% endhighlight %}
 
 Adicione a regra para permitir conexões na porta 80:
 
-```sh
+{% highlight sh %}
 sudo ufw allow 80/tcp
-```
+{% endhighlight %}
 
 E então ative o UFW:
 
-```sh
+{% highlight sh %}
 sudo ufw enable
-```
+{% endhighlight %}
